--- a/aidam-site/package.json
+++ b/aidam-site/package.json
@@ -17,7 +17,8 @@
     "react": "18.2.0",
     "react-chat-widget": "^3.1.4",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "sharp": "^0.32.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
